--- a/src/index.css
+++ b/src/index.css
@@ -62,3 +62,34 @@ input:-webkit-autofill:active {
 input:-webkit-autofill {
   -webkit-text-fill-color: white !important;
 }
+
+input[type="color"] {
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  transform: scale(300%);
+}
+
+.cp_wrapper {
+  overflow: hidden;
+  width: 2em;
+  height: 2em;
+  border-radius: 50%;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
+select {
+  max-height: calc(1.2em + 24px);
+  height: calc(1.2em + 24px);
+}
