--- a/src/components/Loader/Loader.css
+++ b/src/components/Loader/Loader.css
@@ -35,3 +35,22 @@
     height: 32px;
   }
 }
+
+.spinner {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  border: 4px solid #f00;
+  border-left: 4px solid #e3e4e7;
+  animation: spinner 1.5s linear infinite;
+  /* margin: 100px; */
+}
+
+@keyframes spinner {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
