--- a/src/index.css
+++ b/src/index.css
@@ -8,9 +8,29 @@
   padding: 0;
 }
 
+/* width */
 ::-webkit-scrollbar {
-  width: 0rem;
-  height: 0rem;
+  width: 5px;
+  height: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  /* background: red; */
+  border-radius: 10px;
+  @apply bg-slate-400;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  /* background: #b30000; */
+  @apply bg-slate-400;
 }
 
 html,
@@ -23,7 +43,7 @@ body {
 }
 
 #root {
-  @apply h-full max-h-full overflow-scroll shadow-2xl rounded-lg dark:border-slate-400 shadow-black border-4;
+  @apply h-full max-h-full overflow-hidden shadow-2xl rounded-lg dark:border-slate-400 shadow-black border-4;
 }
 
 .zoom-in {
